[package]
name = "harbor-migration"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
indicatif = "0.17"
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
v = "0.1.0"
urlencoding = "2.1"
